H2 DB를 테스트용으로 연결함